--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -20,13 +20,9 @@ en:
           attributes:
             model_type:
               invalid: "is not valid"
-  category:
+  model:
     discourse_activity_pub:
-      error:
-        enable_without_username: An ActivityPub username is required to enable ActivityPub.
-        no_change_when_set: An ActivityPub username can't be changed once set.
-        username_taken: "That username is already taken on this server."
-        full_topic_must_be_public: "Full topic publication requires public publication."
+      
 
   post:
     discourse_activity_pub:
@@ -119,9 +115,7 @@ en:
     user:
       error:
         failed_to_create: "Failed to create user for %{actor_id}: %{message}"
-      warning:
-        cant_create_user_for_actor_type: "Cannot create a user for %{actor_type} %{actor_id}"
-        cant_create_actor_for_model_type: "Cannot create an actor for %{model_type} %{model_id}"
+      
     object:
       note:
         link_to_forum: Discuss this on our forum.
@@ -133,9 +127,22 @@ en:
       error:
         not_enabled: "ActivityPub is not enabled"
         actor_not_found: "Actor not found"
+        invalid_model: "Invalid model"
+        model_not_found: "Model not found"
         target_actor_not_found: "Target actor not found"
         not_following_target_actor: "Actor is not following the target actor"
         cant_follow_target_actor: "Actor cant follow the target actor"
+        username_required: An ActivityPub username is required to create an actor.
+        full_topic_must_be_public: "Full topic publication requires public publication."
+      warning:
+        cant_create_model_for_actor_type: "Cannot create a model for %{actor_type} %{actor_id}"
+        cant_create_actor_for_model_type: "Cannot create an actor for %{model_type} %{model_id}"
+        not_allowed_to_create_actor_for_model: "Not allowed to create an actor for %{model_id}"
+        no_options: "No options passed to ActorHandler"
+        no_change_when_set: An ActivityPub username can't be changed once set.
+        invalid_username: "ActivityPub usernames can only contain ASCII characters."
+        username_taken: "That username is already taken on this server."
+
     auth:
       error:
         not_enabled: "ActivityPub Auth is not enabled"
