--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -161,3 +161,4 @@ en:
     activity_pub_delivery_delay_minutes: "Number of minutes to delay delivery of ActivityPub activities ('delete' activities are delivered instantly)."
     activity_pub_verbose_logging: "Enable verbose ActivityPub logs."
     activity_pub_object_logging: "Print all incoming and outgoing ActivityPub objects in the logs (requires verbose logging)."
+    activity_pub_post_status_visibility_groups: "Groups who can see ActivityPub post statuses."
