--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -140,6 +140,7 @@ en:
         invalid_username: "ActivityPub usernames can only contain ASCII characters."
         username_taken: "That username is already taken on this server."
         user_not_authorized: "User not authorized"
+        not_following_actor: "Target actor is not following the actor"
     auth:
       error:
         not_enabled: "Auth is not enabled"
