--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -20,13 +20,9 @@ en:
           attributes:
             model_type:
               invalid: "is not valid"
-  category:
+  model:
     discourse_activity_pub:
-      error:
-        enable_without_username: An ActivityPub username is required to enable ActivityPub.
-        no_change_when_set: An ActivityPub username can't be changed once set.
-        username_taken: "That username is already taken on this server."
-        full_topic_must_be_public: "Full topic publication requires public publication."
+      
 
   post:
     discourse_activity_pub:
@@ -34,10 +30,10 @@ en:
         edit_after_publication: Edit of an ActivityPub note after publication is not currently supported.
 
   discourse_activity_pub:
+    not_enabled: "ActivityPub is not enabled"
     request:
       error:
         json_not_valid: "Invalid JSON-LD"
-        not_enabled: "AcitivtyPub is not enabled"
         not_found: "No object found"
         not_available: "ActivityPub is not available for that model"
         bad_request: "Bad request"
@@ -101,16 +97,13 @@ en:
         processing_json: "Processing JSON delivered to %{delivered_to}"
     webfinger:
       error:
-        not_enabled: "Webfinger is not enabled"
         resource_not_supported: "Resource not supported"
         resource_not_found: "Resource not found"
     category:
       error:
-        not_enabled: "ActivityPub is not enabled"
         category_not_found: "Category not found"
     post:
       error:
-        not_enabled: "ActivityPub is not enabled"
         post_not_found: "Post not found"
         cant_schedule_post: "Can't schedule post"
         cant_unschedule_post: "Can't unschedule post"
@@ -120,9 +113,7 @@ en:
     user:
       error:
         failed_to_create: "Failed to create user for %{actor_id}: %{message}"
-      warning:
-        cant_create_user_for_actor_type: "Cannot create a user for %{actor_type} %{actor_id}"
-        cant_create_actor_for_model_type: "Cannot create an actor for %{model_type} %{model_id}"
+      
     object:
       note:
         link_to_forum: Discuss this on our forum.
@@ -132,14 +123,24 @@ en:
       outbox:
         summary: "%{actor}'s activities"
       error:
-        not_enabled: "ActivityPub is not enabled"
         actor_not_found: "Actor not found"
+        invalid_model: "Invalid model"
+        model_not_found: "Model not found"
         target_actor_not_found: "Target actor not found"
         not_following_target_actor: "Actor is not following the target actor"
         cant_follow_target_actor: "Actor cant follow the target actor"
+        username_required: An ActivityPub username is required to create an actor.
+        full_topic_must_be_public: "Full topic publication requires public publication."
+      warning:
+        cant_create_model_for_actor_type: "Cannot create a model for %{actor_type} %{actor_id}"
+        cant_create_actor_for_model_type: "Cannot create an actor for %{model_type} %{model_id}"
+        not_allowed_to_create_actor_for_model: "Not allowed to create an actor for %{model_id}"
+        no_options: "No options passed to ActorHandler"
+        no_change_when_set: An ActivityPub username can't be changed once set.
+        invalid_username: "ActivityPub usernames can only contain ASCII characters."
+        username_taken: "That username is already taken on this server."
     auth:
       error:
-        not_enabled: "ActivityPub Auth is not enabled"
         invalid_oauth_domain: "Invalid ActivityPub OAuth domain"
         oauth_session_expired: "ActivityPub OAuth session expired"
         failed_to_authorize: "ActivityPub OAuth failed to authorize"
