--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -136,7 +136,7 @@ en:
         cant_create_actor_for_model_type: "Cannot create an actor for %{model_type} %{model_id}"
         not_allowed_to_create_actor_for_model: "Not allowed to create an actor for %{model_id}"
         no_options: "No options passed to ActorHandler"
-        invalid_username: "username must be 3 or more letters or numbers with no spaces."
+        invalid_username: "Username must be %{min_length} to %{max_length} letters, numbers, dashes or underscores."
         username_taken: "That username is already taken on this server."
         user_not_authorized: "User not authorized"
         not_following_actor: "Target actor is not following the actor"
