--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -142,6 +142,7 @@ en:
         user: User
         followed_at: Followed
         follow_pending: pending
+        actions: Actions
       visibility:
         label:
           private: Followers Only
