wip demo of auth flow

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -16,6 +16,11 @@ en:
               invalid: "is not valid"
             object_type:
               invalid: "is not valid"
+        discourse_activity_pub_client:
+          attributes:
+            credentials:
+              required: "are required"
+              invalid: "is not valid"
         discourse_activity_pub:
           attributes:
             model_type:
@@ -149,9 +154,7 @@ en:
         session_expired: "Auth session expired"
         failed_to_authorize: "Failed to authorize"
         failed_to_get_actor: "Failed to get actor"
-        failed_to_verify_redirect: "%{auth_redirect} has not been added to allowed user api auth redirects on %{domain}"
-        failed_to_create_app: "Failed to create app on domain"
-        failed_to_find_app: "Failed to find app for domain"
+        failed_to_verify_client: "Failed to verify client"
         failed_to_get_token: "Failed to get token"
         failed_to_decrypt_payload: "Failed to decrypt payload"
         failed_to_verify_nonce: "Failed to verify nonce"
