Fix incorrect merge conflict resolution

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -137,6 +137,7 @@ en:
         username_required: An ActivityPub username is required to create an actor.
         full_topic_must_be_public: "Full topic publication requires public publication."
         user_not_authorized: "User not authorized"
+        not_following_actor: "Target actor is not following the actor"
       warning:
         cant_create_model_for_actor_type: "Cannot create a model for %{actor_type} %{actor_id}"
         cant_create_actor_for_model_type: "Cannot create an actor for %{model_type} %{model_id}"
