Destroy mastodon client on verification failure
It is possible for our oAuth client to be destroyed or expired on the Mastodon end. If verification fails we need to create a new one.

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -159,7 +159,8 @@ en:
         session_expired: "Auth session expired"
         failed_to_authorize: "Failed to authorize"
         failed_to_get_actor: "Failed to get actor"
-        failed_to_verify_client: "Failed to verify client"
+        failed_to_create_client: "Failed to create client"
+        failed_to_verify_client: "Failed to verify client. Please try to verify again."
         failed_to_get_token: "Failed to get token"
         failed_to_decrypt_payload: "Failed to decrypt payload"
         failed_to_verify_nonce: "Failed to verify nonce"
